# projeto_clinica

./: db.sqlite3  pyproject.toml
clinica_medica/: admin.py  apps.py  models.py
clinica_medica/migrations/: 0001_initial.py
config/: settings.py
