[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rodolphorocha", email = "rodolpho.r2008@gmail.com"},
]
dependencies = ["django>=5.2.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
